--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,9 @@
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1"
   }
