--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,35 +1,29 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "plugin:jsx-a11y/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:import/recommended",
-    "plugin:prettier/recommended",
-    "prettier"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "env": {
+      "browser": true,
+      "es2021": true
     },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react", "react-hooks", "import", "prettier"],
-  "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "singleQuote": true,
-        "trailingComma": "es5",
-        "endOfLine": "auto",
-        "tabWidth": 2
-      }
+    "extends": [
+      "plugin:react/recommended",
+      "airbnb",
+      "plugin:jsx-a11y/recommended",
+      "plugin:react-hooks/recommended",
+      "plugin:import/recommended",
+      "prettier"
     ],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "plugins": ["react", "react-hooks", "import", "prettier"],
+    "rules": {
+      "indent": "off", /* sin indentacion */
+      "default-param-last": "off", /* param default function */
+      "no-unused-vars": "warn" /* advertencia: variable sin usar */,
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }] /* soporte de extensiones */
+    }
   }
-}
+  
