config index w/auth0

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,4 @@
 REACT_APP_API=http://localhost:3001
+
+REACT_APP_DOMAIN=dev-oy1v7fiv.us.auth0.com
+REACT_APP_CLIENT_ID=BunYF0CecSshQFDoF33lfrboMMQCFwsE
