--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "cloudinary": "^1.30.1",
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
