--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
