--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.1",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
